kubernetes/efk/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  elastic-gke-logging-1-elasticsearch-nodeport
  labels:
    app.kubernetes.io/component: elasticsearch-server
    app.kubernetes.io/name: elastic-gke-logging-1
  namespace: kube-logging
spec:
  type: NodePort
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      protocol: TCP
    - name: tcp-transport
      port: 9300
      targetPort: 9300
      protocol: TCP
  selector:
    app.kubernetes.io/component: elasticsearch-server
    app.kubernetes.io/name: elastic-gke-logging-1
