kubernetes/efk/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  elastic-gke-logging-1-kibana-nodeport
  labels:
    app.kubernetes.io/component: kibana-server
    app.kubernetes.io/name: elastic-gke-logging-1
  namespace: kube-logging
spec:
  type: NodePort
  ports:
    - port: 5601
      targetPort: 5601
      protocol: TCP
  selector:
    app.kubernetes.io/component: kibana-server
    app.kubernetes.io/name: elastic-gke-logging-1
